--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "polymer": "Polymer/polymer#~0.4.2",
     "core-elements": "Polymer/core-elements#~0.4.2",
     "paper-elements": "Polymer/paper-elements#~0.4.2",
-    "flatiron-director": "PolymerLabs/flatiron-director#~0.4.0"
+    "flatiron-director": "PolymerLabs/flatiron-director#~0.4.0",
+    "hammerjs": "hammerjs/hammer.js#~2.0.4"
   }
 }
